<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/main_recycler_view_padding_bottom"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:visibility="gone" />

    <include
        android:id="@+id/empty_layout"
        layout="@layout/main_empty_layout"
        android:visibility="gone" />

</FrameLayout>
