<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/movie_poster_content_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/DetailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/line_spacing_extra"
            android:layout_marginStart="@dimen/line_spacing_extra"
            android:layout_weight="4"
            android:lines="2"
            tools:text="@string/tools_movie_title" />

        <ImageView
            android:id="@+id/star_image"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_star_height"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/star_image_content_description"
            android:focusable="true"
            android:scaleType="centerInside" />
    </LinearLayout>

</LinearLayout>