...
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <ListView
                android:id="@+id/search_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:divider="@null"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
...
