...
    <string name="pref_notifications">Notifications</string>
    <string name="nav_feedback">Send feedback</string>

    <!-- Search -->
    <string name="search_label">WatchNext</string>
    <string name="search_hint">Search The MovieDb</string>
    <string name="menu_search">Search</string>
    <string name="settings_description">Search for latest movies and series</string>
    <string name="search_query_hint">Search The MovieDb</string>
    <string name="movie">MOVIE</string>
    <string name="tv_series">TV SERIES</string>
    <string name="no_results">No results found</string>
    <string name="search_empty_text_movie">Please use the search to look up for a movie.  Powered by THE MOVIE DB</string>
    <string name="search_empty_text_serie">Please use the search to look up for a serie.  Powered by THE MOVIE DB</string>
    <string name="search">web search</string>

    <!-- Sort Menu -->
    <string name="sort_by">Sort by</string>
    <string name="sort_menu_title">Title</string>
    <string name="sort_menu_highest_rated">Highest Rated</string>
    <string name="sort_menu_lowest_rated">Lowest Rated</string>
...
